--- a/20220811_chartjs/teacher_20220811.html
+++ b/20220811_chartjs/teacher_20220811.html
@@ -9,30 +9,41 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
+    <!-- datatable css cdn.js -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
+
 </head>
 
 <body>
-    <!--0725_final myhomework api_practice-->
     <div class="jumbotron" id="myJumbotron">
         <!-- <h1>Bootstrap Tutorial</h1>
         <p>Bootstrap is the most popular HTML, CSS...</p> -->
-        <!--bootstrap btn css-->
-        <button type="button" class="btn btn-primary" id="myBtn">getdata</button>
+        <button type="button" class="btn btn-primary" id="myBtn">GET_DATA</button>
         <button type="button" class="btn btn-warning" id="areaBtn">北區</button>
+
+        <!-- <div class="alert alert-success alert-dismissible mt-5">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <strong>Success!</strong> 
+            <p>
+                city=>city,<br>
+                region=>region,<br>
+                ip=>ip,<br>
+                country=>country,<br>
+                timezone=>timezone<br>
+            </p>
+        </div> -->
     </div>
 
     <p id="myP"></p>
 
-    <!--container-->
     <div class="container">
         <div id="myDiv"></div>
     </div>
 
     <div class="container-fluid">
-
-        <h2>myhomework-connect_api_practice</h2>
-        <p>API上課練習作業</p>
-        <table class="table table-hover">
+        <h2>Hoverable Dark Table</h2>
+        <p>The .table-hover class adds a hover effect (grey background color) on table rows:</p>
+        <table id="table_id" class="table table-dark table-hover">
             <thead>
                 <tr>
                     <th>ID</th>
@@ -41,16 +52,13 @@
                     <th>WEB</th>
                 </tr>
             </thead>
-
             <tbody id="myTbody">
-            </tbody>
 
+            </tbody>
         </table>
-        
     </div>
 
 
-    <!--需引入datajs-->
     <script src="./js/data.js"></script>
 
 
@@ -60,11 +68,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- slim 無ajax -->
 
-
     <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script> -->
-    <!--引入這兩個js-->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
     </script>
@@ -72,23 +78,20 @@
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
 
-
-
     <!-- axios -->
-    <!--老師上課講解是用axios的-->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-
 
     <!-- 飲料店販賣機 -->
     <!-- 1. 奶茶 100 -->
     <!-- 2. 紅茶 50 -->
     <!-- 3. 綠茶 20 -->
-    <!--需引入這串的js dataurl自於 let dataUrl = 'https://ipinfo.io/json?token=aa9202640b523b';-->
     <script src="./myToken/token.js"></script>
 
+    <!-- datatable js cdn.js -->
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js">
+    </script>
+
     <script>
-        //用document.ready_function包,不要忘記大括號,整個把裡面的資料包起來
         $(document).ready(function () {
 
             const myP = $('#myP');
@@ -103,25 +106,48 @@
                     .then(function (res) {
                         console.log('res', res);
                         let data = res.data;
-                        let dataText = '';
-                        data.forEach(myFunction);
 
-                        function myFunction(item, index) {
-                            // console.log(`<p>${item.id}-${item.name}-${item.web}</p><br>`);
-                            if (item.area == '北部') {
-                                dataText += `
-                                    <tr>
-                                        <td>${item.id}</td>
-                                        <td>${item.area}</td>
-                                        <td>${item.name}</td>
-                                        <td>${item.web}</td>
-                                    </tr>              
-                                    `;
-                            }
-                        }
-                        const myTbody = $('#myTbody');
-                        myTbody.append(dataText);
+                        // 方法一
+                        // let dataText = '';
+                        // data.forEach(myFunction);
 
+                        // function myFunction(item, index) {
+                        //     // console.log(`<p>${item.id}-${item.name}-${item.web}</p><br>`);
+                        //     if (item.area == '北部') {
+                        //         dataText += `
+                        //             <tr>
+                        //                 <td>${item.id}</td>
+                        //                 <td>${item.area}</td>
+                        //                 <td>${item.name}</td>
+                        //                 <td>${item.web}</td>
+                        //             </tr>              
+                        //             `;
+                        //     }
+                        // }
+                        // const myTbody = $('#myTbody');
+                        // myTbody.append(dataText);
+
+                        // $('#table_id').DataTable();
+
+                        // 方法二
+                        $('#table_id').DataTable({
+                            data: data,
+                            columns: [{
+                                    data: 'id',
+                                    title: '55688'
+
+                                },
+                                {
+                                    data: 'area'
+                                },
+                                {
+                                    data: 'name'
+                                },
+                                {
+                                    data: 'web'
+                                }
+                            ]
+                        });
 
                     })
                     .catch(function (error) {
@@ -210,7 +236,6 @@
             })
 
 
-            //下面都是0725早上練習的可以註解掉
             // myP.text('12345');
 
             // 1. fetch
@@ -256,9 +281,32 @@
             //         // always executed
             //     });
 
+            // 練習一
+            // btn.click => 抓API資訊
+
+            // 練習二
+            // btn.click => 抓API資訊
+            // 顯示出 ip , city ...等等資料
+
+            // 練習三
+            // 成功　bs alert 
+            // 失敗 bs alert
+
+
+            // 練習一
+            // table
+
+            // 練習二
+            // 按下北區btn
+            // 顯示北區
+
+
         });
     </script>
 
 
+
+
 </body>
+
 </html>
